--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,8 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.11"
 natural-computing = {git = "https://github.com/gsoaresbaptista/natural-computing"}
+scikit-learn = "^1.3.1"
+scikit-opt = "^0.6.6"
 
 
 [tool.poetry.group.dev.dependencies]
