--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,9 +7,9 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.11"
-natural-computing = {git = "https://github.com/gsoaresbaptista/natural-computing"}
 scikit-learn = "^1.3.1"
 scikit-opt = "^0.6.6"
+natural-computing = {git = "https://github.com/gsoaresbaptista/natural-computing.git"}
 
 
 [tool.poetry.group.dev.dependencies]
