--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ scikit-learn = "^1.3.1"
 scikit-opt = "^0.6.6"
 matplotlib = "^3.8.0"
 pandas = "^2.1.2"
-evolutionary-programming = "^0.7.3"
+evolutionary-programming = "0.8.0"
 seaborn = "^0.13.0"
 
 
